--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.7",
     "dynamic-cdn-webpack-plugin": "^3.4.0",
+    "eslint-loader": "^1.9.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
